# ecsact-examples

./: .gitattributes  .gitmodules  LICENSE  README.md  renovate.json
noengine-cpp-field-indexing/: .bazelrc  BUILD.bazel  README.md
noengine-cpp-field-indexing/src/: example.ecsact  main.cc  system_impls.cc
noengine-cpp-sdl2/: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md
noengine-cpp-sdl2/src/: collision.cc  example.ecsact  main.cc  render.cc  simulation_config.hh  system_impls.cc  viewport_collision.cc
unity-csharp-basic/: .gitignore  README.md
unity-csharp-basic/Assets/: EcsactExample.inputactions
unity-csharp-basic/Assets/Editor/: EcsactCsharpSystemImplSettings.asset  EcsactSettings.asset
unity-csharp-basic/Assets/KennyAssets/: License.txt
unity-csharp-basic/Assets/Resources/: Block.prefab  Menu.prefab
unity-csharp-basic/Assets/Scenes/: AsyncMenu.unity  BasicExample.unity  MovingBlock.unity
unity-csharp-basic/Assets/Scripts/: AddExample.cs  AsyncMenu.cs  BasicExample.cs  MoveControls.cs  StaticCollider.cs
unity-csharp-basic/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
unreal-cpp-basic/: .editorconfig  .gitattributes  .gitignore  Basic.uproject  EcsactUnrealCodegen.bat  EcsactUnrealCppBasic.uproject  README.md
unreal-cpp-basic/Config/: DefaultEcsact.ini  DefaultEngine.ini  DefaultGame.ini
unreal-cpp-basic/Content/: CoolEntitySpawner.uasset  CounterWidget.uasset  EntityActor.uasset  EntitySpawner.uasset  Example.umap  Level.umap  MainMenu.umap  MainMenuWidget.uasset
unreal-cpp-basic/Content/Ecsact/: Example.ecsact
unreal-cpp-basic/Plugins/Ecsact/: Ecsact.uplugin
unreal-cpp-basic/Source/: Basic.Target.cs  BasicEditor.Target.cs  EcsactUnrealCppBasic.Target.cs  EcsactUnrealCppBasicEditor.Target.cs
unreal-cpp-basic/Source/Basic/: Basic.Build.cs  Basic.cpp  Basic.ecsact  Basic.ecsact.hh  Basic__ecsact__mass__ue.cpp  Basic__ecsact__mass__ue.h  Basic__ecsact__ue.cpp  Basic__ecsact__ue.h  CounterSubsystem.cpp  CounterSubsystem.h
unreal-cpp-basic/Source/EcsactUnrealCppBasic/: EcsactUnrealCppBasic.Build.cs  EcsactUnrealCppBasic.cpp  EntitySpawner.cpp  EntitySpawner.h  Example.ecsact  Example.ecsact.hh  Example.ecsact.systems.cc  Example.ecsact.systems.h  Example.ecsact.systems.hh  Example__ecsact__ue.cpp  Example__ecsact__ue.h  SystemImpls.cc  SystemImpls.h
unreal-cpp-benchmark/: .gitignore  BuildSystemImpls.ps1  EcsactBenchmark.uproject
unreal-cpp-benchmark/Config/: DefaultEcsact.ini  DefaultEngine.ini  DefaultGame.ini
unreal-cpp-benchmark/Content/Blueprints/: BP_EcsactBenchmarkMassSpawner.uasset  BP_StartButton.uasset  StartButton.uasset
unreal-cpp-benchmark/Content/Maps/: Benchmark.umap
unreal-cpp-benchmark/Content/Mass/: BenchmarkConfig.uasset
unreal-cpp-benchmark/Source/: EcsactBenchmark.Target.cs  EcsactBenchmarkEditor.Target.cs
unreal-cpp-benchmark/Source/EcsactBenchmark/: EcsactBenchmark.Build.cs  EcsactBenchmark.cpp  EcsactBenchmark.ecsact  EcsactBenchmark.ecsact.hh  EcsactBenchmarkMassSpawner.cpp  EcsactBenchmarkMassSpawner.h  EcsactBenchmarkRunner.cpp  (+5 more)
unreal-cpp-benchmark/SystemImpls/: EcsactSystemImpls.cpp
unreal-cpp-custom-codegen/: .clang-format  .editorconfig  CustomCodegen.uproject  README.md
unreal-cpp-custom-codegen/Config/: DefaultEngine.ini  DefaultGame.ini
unreal-cpp-custom-codegen/Source/: CustomCodegen.Target.cs  CustomCodegenEditor.Target.cs
unreal-cpp-floppybots/: .clang-format  .gitignore  BuildSystemImpls.ps1  Floppybots.uproject  README.md
unreal-cpp-floppybots/Config/: DefaultEcsact.ini  DefaultEcsactNet.ini  DefaultEcsactNetWasm.ini  DefaultGame.ini  DefaultInput.ini  DefaultMass.ini
unreal-cpp-floppybots/Source/: Floppybots.Target.cs  FloppybotsEditor.Target.cs
unreal-cpp-floppybots/SystemImpls/: EcsactSystemImpls.cpp
unreal-cpp-floppybots/Tools/: LinkUnrealPlugins.bat
unreal-cpp-net-fps/: BuildSystemImpls.ps1  EcsactUnrealFps.uproject  Floppybots.uproject  README.md
unreal-cpp-net-fps/Config/: DefaultEcsact.ini  DefaultEcsactNet.ini  DefaultEcsactNetWasm.ini  DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultMass.ini  DefaultPlugins.ini
unreal-cpp-net-fps/Source/: EcsactUnrealFps.Target.cs  EcsactUnrealFpsEditor.Target.cs  Floppybots.Target.cs
unreal-cpp-net-fps/SystemImpls/: EcsactSystemImpls.cpp
(+772 files in other folders)
